feat: add With a Method

--- a/examples/var-angular/src/app/components/loop/loop.component.html
+++ b/examples/var-angular/src/app/components/loop/loop.component.html
@@ -60,3 +60,9 @@
     index: {{i}} | text: {{item.text}}
   </li>
 </ul>
+<hr>
+<ul>
+  <li *ngFor="let item of getItems(3)">
+    {{item.id}}
+  </li>
+</ul>
