feat: add react loop

--- a/examples/var-angular/src/app/components/loop/loop.component.html
+++ b/examples/var-angular/src/app/components/loop/loop.component.html
@@ -72,7 +72,5 @@
 <hr>
 <h3>With a Method</h3>
 <ul>
-  <li *ngFor="let item of getItems(3)">
-    {{item.id}}
-  </li>
+  <li *ngFor="let item of getItems(3)">{{item.id}}</li>
 </ul>
