feat: add condition

--- a/examples/var-angular/src/app/app.component.html
+++ b/examples/var-angular/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!-- <app-hello-world></app-hello-world> -->
-<app-loop></app-loop>
+<!-- <app-loop></app-loop> -->
+<app-condition></app-condition>
