--- a/examples/var-angular/src/app/components/condition/condition.component.html
+++ b/examples/var-angular/src/app/components/condition/condition.component.html
@@ -17,7 +17,7 @@
   <div>otherwise, you can't see me</div>
 </ng-template>
 <h3>With an Expression</h3>
-<div *ngIf="val >= 10">You can see me</div>
+<div *ngIf="val >= 10">val is greater and equal to 10</div>
 <h3>Without Showing a Root Element</h3>
 <p>woo</p>
 <ng-container *ngIf="isShow">
