feat: add event

--- a/examples/var-angular/src/app/app.component.html
+++ b/examples/var-angular/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-hello-world></app-hello-world> -->
 <!-- <app-loop></app-loop> -->
-<app-condition></app-condition>
+<!-- <app-condition></app-condition> -->
+<app-event></app-event>
