feat: add 2-state

--- a/examples/var-angular/src/app/app.component.html
+++ b/examples/var-angular/src/app/app.component.html
@@ -1,4 +1,1 @@
-<!-- <app-hello-world></app-hello-world> -->
-<!-- <app-loop></app-loop> -->
-<!-- <app-condition></app-condition> -->
-<app-event></app-event>
+<app-hero></app-hero>
