feat: add ng part

--- a/examples/var-angular/src/app/components/hero-parent/hero-parent.component.html
+++ b/examples/var-angular/src/app/components/hero-parent/hero-parent.component.html
@@ -2,4 +2,7 @@
                 [title]="title"
                 [health]="health"
                 [attackDamage]="attackDamage"
-                [skills]="skills"></app-hero-props>
+                [skills]="skills"
+                [attr.title]="'Super Hero'"
+                [class.highlight]="isHighlight"
+                [style.color]="isHighlight ? 'red' : 'green'"></app-hero-props>
