feat: add ng event

--- a/examples/var-angular/src/app/components/hero-event-parent/hero-event-parent.component.html
+++ b/examples/var-angular/src/app/components/hero-event-parent/hero-event-parent.component.html
@@ -1,1 +1,5 @@
-<p>hero-event-parent works!</p>
+<app-hero-event [items]="skills"
+                (selectionChanges)="onSelectionChanges($event)"></app-hero-event>
+<ol>
+  <li *ngFor="let item of selectedItems">{{item.name + '\t'}}</li>
+</ol>
